dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Revision$)

AC_INIT(ylogout.c, 0.2, voss@seehuhn.de)
AC_CONFIG_SRCDIR([ylogout.c])
AM_INIT_AUTOMAKE

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_PATH_XTRA

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile)
